MYFACES-3711 Add alwaysRecompile mode for EL Expression Cache Mode